--- a/styles.css
+++ b/styles.css
@@ -17,7 +17,7 @@ body {
     display: flex;
     justify-content: space-around;
     text-align: center;
-    background: #C591F9;
+    background: yellow;
     color: #2b2839;
     font-style: italic;
     border-bottom: 10px solid #EBC7E8;
