--- a/styles.css
+++ b/styles.css
@@ -20,7 +20,7 @@ body {
     background: yellow;
     color: #2b2839;
     font-style: italic;
-    border-bottom: 10px solid #EBC7E8;
+    border-bottom: 10px solid #00235B;
 }
 
 .text-card {
